test/parsing/errors/exceptOnlyInvalidExpr.chpl
use OS except "not a symbol";
